# TeamCat

./: README.md  main.py  pyproject.toml
.github/workflows/: test.yaml
static/css/: jumbotron.css
templates/: about.html  contact.html  diet.html  homepage.html  layout.html  mating-reproduction.html  navigation.html
tests/: conftest.py  test_page.py
