[tool.poetry]
name = "teamcat"
version = "0.1.0"
description = ""
authors = ["Pedro Rodrigues <Pedro.Rodrigues@inait.ai>",
    "qiyang hu <qiyang.hu@inait.ai>",
    "João Afonso <Joao.Afonso@inait.ai>",
    "Alexandre Tarantini <alexandre.tarantini@inait.ai>"]


[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
